// Jest Snapshot v1, https://jestjs.io/docs/snapshot-testing

exports[`Thumbnails renders correctly with a list of more 1`] = `
.emotion-0 {
  display: grid;
  grid-template-columns: 1fr;
  gap: 5px;
}

@media (min-width: 420px) {
  .emotion-0 {
    grid-template-columns: 1fr 1fr;
  }
}

@media (min-width: 576px) {
  .emotion-0 {
    grid-template-columns: 1fr 1fr 1fr;
    gap: 10px;
  }
}

@media (min-width: 992px) {
  .emotion-0 {
    grid-template-columns: 1fr 1fr 1fr 1fr;
    gap: 15px;
  }
}

.emotion-0 li {
  content-visibility: auto;
}

<div>
  <h1>
    type
    : 
    title
     (
    2
    )
  </h1>
  <ul
    class="emotion-0"
  >
    <li>
      <a
        aria-label="link-to-picture"
        href="/picture/uid-1"
      >
        <picture>
          <img
            alt="title1"
            height="174"
            image="[object Object]"
            width="261"
          />
        </picture>
      </a>
    </li>
    <li>
      <a
        aria-label="link-to-picture"
        href="/picture/uid-2"
      >
        <picture>
          <img
            alt="title2"
            height="174"
            image="[object Object]"
            width="261"
          />
        </picture>
      </a>
    </li>
  </ul>
</div>
`;

exports[`Thumbnails renders correctly with a list of one 1`] = `
.emotion-0 {
  display: grid;
  grid-template-columns: 1fr;
  gap: 5px;
}

@media (min-width: 420px) {
  .emotion-0 {
    grid-template-columns: 1fr 1fr;
  }
}

@media (min-width: 576px) {
  .emotion-0 {
    grid-template-columns: 1fr 1fr 1fr;
    gap: 10px;
  }
}

@media (min-width: 992px) {
  .emotion-0 {
    grid-template-columns: 1fr 1fr 1fr 1fr;
    gap: 15px;
  }
}

.emotion-0 li {
  content-visibility: auto;
}

<div>
  <h1>
    type
    : 
    title
     (
    1
    )
  </h1>
  <ul
    class="emotion-0"
  >
    <li>
      <a
        aria-label="link-to-picture"
        href="/picture/uid-bar"
      >
        <picture>
          <img
            alt="title1"
            height="174"
            image="[object Object]"
            width="261"
          />
        </picture>
      </a>
    </li>
  </ul>
</div>
`;

exports[`Thumbnails renders correctly with a list of zero 1`] = `
.emotion-0 {
  display: grid;
  grid-template-columns: 1fr;
  gap: 5px;
}

@media (min-width: 420px) {
  .emotion-0 {
    grid-template-columns: 1fr 1fr;
  }
}

@media (min-width: 576px) {
  .emotion-0 {
    grid-template-columns: 1fr 1fr 1fr;
    gap: 10px;
  }
}

@media (min-width: 992px) {
  .emotion-0 {
    grid-template-columns: 1fr 1fr 1fr 1fr;
    gap: 15px;
  }
}

.emotion-0 li {
  content-visibility: auto;
}

<div>
  <h1>
    type
    : 
    title
     (
    0
    )
  </h1>
  <ul
    class="emotion-0"
  />
</div>
`;
